--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Openingo.github.com by OpeningO</title>
+    <title>OpeningO,Inc</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Openingo.github.com</h1>
-          <h2>openingo home</h2>
+          <h1>OpeningO,Inc</h1>
+          <h2>openingo,Inc home</h2>
         </header>
 
         <section id="downloads" class="clearfix">
