--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+  <link href="icon.png" rel="shortcut icon">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -18,8 +19,8 @@
       <div class="inner">
 
         <header>
-          <h1>OpeningO,Inc</h1>
-          <h2>openingo,Inc home</h2>
+          <h1>OpeningO</h1>
+          <h2>Opening Technology Observer</h2>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -27,10 +28,9 @@
         </section>
 
         <hr>
-
+        <h1>Projects from OpeningO:</h1>
         <section id="main_content">
-          <h3>
-<a name="opening-technology-observer" class="anchor" href="#opening-technology-observer"><span class="octicon octicon-link"></span></a>Opening Technology Observer</h3>
+         1、MacOSC <h3> <a name="opening-technology-observer" class="anchor" href="#opening-technology-observer"><span class="octicon octicon-link"></span></a><a href="http://openingo.github.io/MacOSC/">MacOSC</a> is a cross platform client for <a href="http://www.oschina.net" target="_blank">OSChina</a></h3>
         </section>
 
         <footer>
