--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
 
         <footer>
-        (c) copyright 2013 Opening,Inc
+        (c) 2013 Copyright by Opening,Inc
         </footer>
 
         
