--- a/team.html
+++ b/team.html
@@ -24,12 +24,9 @@
         </header>
 
         <hr>
-        <h1>Projects from OpeningO:</h1>
+        <h1>IT Workers:</h1>
         <ul>
-          <li><a href="http://openingo.github.io/MacOSC/">MacOSC </a><br/>
-             MacOSC is a cross platform client for 
-             <a href="http://www.oschina.net" target="_blank">OSChina</a>. Created by <a href="http://zhucongqi.cn" target="_blank">BruceZCQ</a>
-          </li>
+          <li><a href="http://zhucongqi.cn">BruceZCQ  (http://zhucongqi.cn)</a></li>
         </ul>
 
         <footer>
