--- a/team.html
+++ b/team.html
@@ -28,7 +28,7 @@
         <ul>
           <li><a href="http://zhucongqi.cn">BruceZCQ  (http://zhucongqi.cn)</a></li>
         </ul>
-
+        期待您的加入哦~Waiting for Your,Contact Us.
         <footer>
         <h5><a href="team.html">Team</a> | <a href="mailto:openingo.inc@gmail.com">Contact</a></h5>
         (c) 2013 Copyright by Opening,Inc
