add github wiget

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <li><a href="http://openingo.github.io/MacOSC/">MacOSC </a><br/>
              MacOSC is a cross platform client for 
              <a href="http://www.oschina.net" target="_blank">OSChina</a>. Created by <a href="http://zhucongqi.cn" target="_blank">BruceZCQ</a>
+			<div class="github-widget" data-repo="OpeningO/MacOSC"></div> 
           </li>
         </ul>
 
@@ -38,6 +39,8 @@
         </footer>
 
       </div>
-    </div>
+    </div> 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script src="javascripts/jquery.githubRepoWidget.min.js" type="text/javascript"></script>
   </body>
 </html>
