--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </header>
 
         <hr>
-        <h1>Projects from OpeningO:</h1>
-        <ul>
-          <li><a href="http://openingo.github.io/MacOSC/">MacOSC </a><br/>
-             MacOSC is a cross platform client for 
-             <a href="http://www.oschina.net" target="_blank">OSChina</a>. Created by <a href="http://zhucongqi.cn" target="_blank">BruceZCQ</a>
+        <span class="projectheader">Projects from OpeningO:</span>
+        <ul class="projects">
+          <li><a href="http://openingo.github.io/MacOSC/" class="projectname">MacOSC</a> <span class="projecttimeline">  Begining with 2013.10.4 - </span><span class="projectstate">Going</span><br/>
+             <span class="projectintro">MacOSC is a cross platform client for 
+             <a href="http://www.oschina.net" target="_blank">OSChina</a>. Created by <a href="http://zhucongqi.cn" target="_blank">BruceZCQ</a></span>
 			<div class="github-widget" data-repo="OpeningO/MacOSC"></div> 
           </li>
         </ul>
