add new project

--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
         <hr>
         <span class="projectheader">Projects from OpeningO:</span>
         <ul class="projects">
+        <!--macosc-->
           <li><a href="http://openingo.github.io/MacOSC/" class="projectname">MacOSC</a> <span class="projecttimeline">  Begining with 2013.10.4 - </span><span class="projectstate">Going</span><br/>
              <span class="projectintro">MacOSC is a cross platform client for 
              <a href="http://www.oschina.net" target="_blank">OSChina</a>. Created by <a href="http://zhucongqi.cn" target="_blank">BruceZCQ</a></span>
 			<div class="github-widget" data-repo="OpeningO/MacOSC"></div> 
+          </li>
+          <!-- IQDictionary-->
+          <li><a href="http://openingo.github.io/IQDictionary/" class="projectname">IQDictionary</a> <br/>
+             <span class="projectintro">The IQDictionary is a Category of NSDictionary and NSMutableDictionary , your can use it insertMulti value for one key, and easy to get others.</span>
+      <div class="github-widget" data-repo="OpeningO/IQDictionary"></div> 
           </li>
         </ul>
 
