--- a/team.html
+++ b/team.html
@@ -26,7 +26,8 @@
         <hr>
         <h1>IT Workers:</h1>
         <ul>
-          <li><a href="http://zhucongqi.cn">BruceZCQ  (http://zhucongqi.cn)</a></li>
+          <li><a href="http://zhucongqi.cn" class="projectname">BruceZCQ</a></li>
+          <li>Verphen</li>
         </ul>
         期待您的加入哦~Waiting for Your,Contact Us.
         <footer>
