add verphen home link

--- a/team.html
+++ b/team.html
@@ -27,7 +27,7 @@
         <h1>IT Workers:</h1>
         <ul>
           <li><a href="http://zhucongqi.cn" class="projectname">BruceZCQ</a></li>
-          <li><a href="http://verphen.github.io/">Verphen</></li>
+          <li><a href="http://verphen.github.io/" class="projectname>Verphen</></li>
         </ul>
         期待您的加入哦~Waiting for Your,Contact Us.
         <footer>
