--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 			<div class="github-widget" data-repo="OpeningO/MacOSC"></div> 
           </li>
           <!-- IQDictionary-->
-          <li><a href="http://openingo.github.io/IQDictionary/" class="projectname">IQDictionary</a> <span class="projecttimeline"> Finished 2013.12.9 - </span><span class="projectstate">Finished</span><br/>
+          <li><a href="http://openingo.github.io/IQDictionary/" class="projectname">IQDictionary</a> <span class="projecttimeline"> Finished at 2013.12.9 - </span><span class="projectstate">Finished</span><br/>
              <span class="projectintro">The IQDictionary is a Category of NSDictionary and NSMutableDictionary , your can use it insertMulti value for one key, and easy to get others.</span>
       <div class="github-widget" data-repo="OpeningO/IQDictionary"></div> 
           </li>
                    <!-- OpODB-->
-          <li><a href="http://openingo.github.io/OpODB/" class="projectname">OpODB</a> span class="projecttimeline"> Begining with never - </span><span class="projectstate">Never</span><br/>
+          <li><a href="http://openingo.github.io/OpODB/" class="projectname">OpODB</a> <span class="projecttimeline"> Begining with never - </span><span class="projectstate">Never</span><br/>
              <span class="projectintro">OpODB - A simple NoSQL database(key-value pair) in C++ [std-c++11 ]. It cross platform.</span>
       <div class="github-widget" data-repo="OpeningO/OpODB"></div> 
           </li>
