--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="github-widget" data-repo="OpeningO/IQDictionary"></div> 
           </li>
                    <!-- OpODB-->
-          <li><a href="http://openingo.github.io/OpODB/" class="projectname">OpODB</a> <span class="projecttimeline"> Begining with never - </span><span class="projectstate">Never</span><br/>
+          <li><a href="http://openingo.github.io/OpODB/" class="projectname">OpODB</a> <span class="projecttimeline"> Begining - </span><span class="projectstate">Going</span><br/>
              <span class="projectintro">OpODB - A simple NoSQL database(key-value pair) in C++ [std-c++11 ]. It cross platform.</span>
       <div class="github-widget" data-repo="OpeningO/OpODB"></div> 
           </li>
