add new project

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
         <span class="projectheader">Projects from OpeningO:</span>
         <ul class="projects">
 
+          <!-- jfinal-oauth2.0-server-->
+          <li><a href="http://openingo.github.io/jfinal-oauth2.0-server/" class="projectname">jfinal-oauth2.0-server</a> <span class="projecttimeline"> Finished at 2015.8.1 - </span><span class="projectstate">Continue</span><br/>
+             <span class="projectintro">jfinal-oauth2.0-server is the project that Oauth2.0 Jfinal implementation.</span>
+      <div class="github-widget" data-repo="OpeningO/jfinal-oauth2.0-server"></div> 
+          </li>
+          <!-- JFinal-ext2-->
+          <li><a href="http://openingo.github.io/JFinal-ext2/" class="projectname">JFinal-ext2</a> <span class="projecttimeline"> Finished at 2016.1.1 - </span><span class="projectstate">Continue</span><br/>
+             <span class="projectintro">JFinal-ext2 is the <a href="https://github.com/jfinal/jfinal/" class="projectname">JFinal</a>'s Extension.</span>
+      <div class="github-widget" data-repo="OpeningO/JFinal-ext2"></div> 
+          </li>
+
           <!-- IQDictionary-->
           <li><a href="http://openingo.github.io/IQDictionary/" class="projectname">IQDictionary</a> <span class="projecttimeline"> Finished at 2013.12.9 - </span><span class="projectstate">Finished</span><br/>
              <span class="projectintro">The IQDictionary is a Category of NSDictionary and NSMutableDictionary , your can use it insertMulti value for one key, and easy to get others.</span>
