--- a/team.html
+++ b/team.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link href='stylesheet/page.css' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-  <link href="icon.png" rel="shortcut icon">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <title>OpeningO,Inc</title>
-  </head>
+<html lang="en-us">
+<head>
+<meta charset="UTF-8">
+<title>OpeningO Co.,Ltd.</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css"
+  media="screen">
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700'
+  rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css"
+  media="screen">
+<link rel="stylesheet" type="text/css"
+  href="stylesheets/github-light.css" media="screen">
+</head>
+<body>
+  <section class="page-header"><img src="icon.png" width="100" height="100" />
+    <h1 class="project-name">OpeningO Co.,Ltd.</h1>
+    <h2 class="project-tagline">Opening Technology Observer</h2>
+    <a href="team.html" class="btn">Team</a> <a
+      href="mailto:openingo.inc@gmail.com" class="btn">Contact</a>
+  </section>
 
-  <body>
-    <div id="container">
-      <div class="inner">
-        <header>
-          <h1>
-      <img src="icon.png" width="100" height="100" /><a href="index.html">OpeningO</a></h1>
-          <h2>Opening Technology Observer</h2>
-        </header>
+  <section class="main-content">
+    <!-- BruceZCQ -->
+    <h3>
+      BruceZCQ
+      <a id="BruceZCQ" class="anchor"
+        href="http://zhucongqi.cn"
+        aria-hidden="true"><span class="octicon octicon-link"><i>(http://zhucongqi.cn)</i></span></a>
+    </h3>
+    <!-- lucher -->
+    <h3>
+      lucher
+      <a id="lucher" class="anchor"
+        href="#"
+        aria-hidden="true"><span class="octicon octicon-link"></span></a>
+    </h3>
 
-        <hr>
-        <h1>IT Workers:</h1>
-        <ul>
-          <li><a href="http://zhucongqi.cn" class="projectname">BruceZCQ</a></li>
-          <li><a href="#" class="projectname">lucher</></li>
-        </ul>
-        期待您的加入哦~Waiting for Your,Contact Us.
-        <footer>
-        <h5><a href="team.html">Team</a> | <a href="mailto:openingo.inc@gmail.com">Contact</a></h5>
-        (c) 2013 Copyright by Opening,Inc
-        </footer>
-
-      </div>
-    </div>
-  </body>
+    <footer class="site-footer">
+      <span class="site-footer-owner">&copy; 2013-2016 Copyright by
+        OpeningO Co.,Ltd.</span>
+    </footer>
+  </section>
+</body>
 </html>
