--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   href="stylesheets/github-light.css" media="screen">
 </head>
 <body>
-  <section class="page-header"><img src="icon.png" width="100" height="100" />
+  <section class="page-header"><a href="/"><img src="icon.png" width="100" height="100" /></a>
     <h1 class="project-name">OpeningO Co.,Ltd.</h1>
     <h2 class="project-tagline">Opening Technology Observer</h2>
     <a href="team.html" class="btn">Team</a> <a
