update team style

--- a/team.html
+++ b/team.html
@@ -22,21 +22,28 @@
   </section>
 
   <section class="main-content">
+  <ul>
     <!-- BruceZCQ -->
+    <li>
     <h3>
       BruceZCQ
       <a id="BruceZCQ" class="anchor"
         href="http://zhucongqi.cn"
         aria-hidden="true"><span class="octicon octicon-link"><i>(http://zhucongqi.cn)</i></span></a>
     </h3>
-    <!-- lucher -->
+    </li>
+      <!-- lucher -->
+    <li>
     <h3>
       lucher
       <a id="lucher" class="anchor"
         href="#"
         aria-hidden="true"><span class="octicon octicon-link"></span></a>
     </h3>
-
+    </li>
+  </ul>
+    
+    <h5>期待你的加入...</h5>
     <footer class="site-footer">
       <span class="site-footer-owner">&copy; 2013-2016 Copyright by
         OpeningO Co.,Ltd.</span>
