--- a/index.html
+++ b/index.html
@@ -14,59 +14,44 @@
   href="stylesheets/github-light.css" media="screen">
 </head>
 <body>
-  <section class="page-header"><a href="/"><img src="icon.png" width="100" height="100" /></a>
+  <section class="page-header"><a href="/"><img src="logo.png" width="100" height="100" /></a>
     <h1 class="project-name">OpeningO Co.,Ltd.</h1>
     <h2 class="project-tagline">Opening Technology Observer</h2>
-    <a href="team.html" class="btn">Team</a> <a
-      href="mailto:openingo.inc@gmail.com" class="btn">Contact</a>
   </section>
 
   <section class="main-content">
-    <!-- jfinal-oauth20-server -->
-    <h1>
-      <a id="jfinal-oauth20-server" class="anchor"
-        href="http://openingo.github.io/jfinal-oauth2.0-server/"
-        aria-hidden="true"><span class="octicon octicon-link">jfinal-oauth2.0-server</span></a>
-    </h1>
-    jfinal-oauth2.0-server is the project that Oauth2.0 Jfinal implementation.
-    <h3>Status:<b>Continue</b></h5>Time: <span>2015.08.01 - </span>
-    <h1>
-      <!-- jfianl-ext2 -->
-      <a id="jfianl-ext2" class="anchor"
-        href="http://openingo.github.io/JFinal-ext2/" aria-hidden="true"><span
-        class="octicon octicon-link">JFinal-ext2</span></a>
-    </h1>
-    Final-ext2 is the <a href="https://github.com/jfinal/jfinal/" class="projectname">JFinal</a>'s Extension.
-    <h3>Status:<b>Continue</b></h5>Time: <span>2016.01.01 - </span>
-    <!-- IQDictionary -->
-    <h1>
-      <a id="IQDictionary" class="anchor"
-        href="http://openingo.github.io/IQDictionary/" aria-hidden="true"><span
-        class="octicon octicon-link">IQDictionary</span></a>
-    </h1>
-    The IQDictionary is a Category of NSDictionary and NSMutableDictionary , your can use it insertMulti value for one key, and easy to get others.
-    <h3>Status:<b>Finished</b></h5>Time: <span>2013.12.09</span>
-
-    <!-- NBTableView -->
-    <h1>
-      <a id="NBTableView" class="anchor"
-        href="http://openingo.github.io/NBTableView/" aria-hidden="true"><span
-        class="octicon octicon-link">NBTableView</span></a>
-    </h1>
-    NBTableView has the same layout in iOS 6 or iOS 7 , and like the iOS 7 Grouped Style..
-    <h3>Status:<b>Finished</b></h5>Time: <span>2014.05.08</span>
-    <!-- OOMarkButton -->
-    <h1>
-      <a id="OOMarkButton" class="anchor"
-        href="http://openingo.github.io/OOMarkButton/" aria-hidden="true"><span
-        class="octicon octicon-link">OOMarkButton</span></a>
-    </h1>
-    OOMarkButton : Single CheckBox or RadioBox or MultiCheckBox or MultiRadio . and like html, the box has a group.
-    <h3>Status:<b>Finished</b></h5>Time: <span>2014.05.21</span>
-
+  <div>
+  <h1><b>We pay attention and research on computer open source technology, and aim to use open source to give back to open source.</b></h1>
+    </div>
+    <b>Teams</b>
+    <ul>
+    <!-- Jobsz -->
+    <li>
+    <h3>
+      Jobsz
+      <a id="Jobsz" class="anchor"
+        href="https://izcqi.com"
+        aria-hidden="true"><span class="octicon octicon-link"><i>(https://izcqi.com)</i></span></a>
+    </h3>
+    </li>
+      <!-- lucher -->
+    <li>
+    <h3>
+      lucher
+      <a id="lucher" class="anchor"
+        href="#"
+        aria-hidden="true"><span class="octicon octicon-link"></span></a>
+    </h3>
+    </li>
+  </ul>
+    <h5>期待你的加入...</h5>
+    <b>Contact:</b>
+    <ul>
+    <li><h5>openingo.inc#gmail.com</h5></li>
+    <li><h5>zcq#zhucongqi.cn</h5></li>
+    </ul>
     <footer class="site-footer">
-      <span class="site-footer-owner">&copy; 2013-2016 Copyright by
-        OpeningO Co.,Ltd.</span>
+      <span class="site-footer-owner">&copy; 2013-2020 OpeningO Co.,Ltd.</span>
     </footer>
   </section>
 </body>
