--- a/index.html
+++ b/index.html
@@ -13,43 +13,14 @@
 <link rel="stylesheet" type="text/css"
   href="stylesheets/github-light.css" media="screen">
 </head>
-<body>
+<body class="page-header">
   <section class="page-header"><a href="/"><img src="logo.png" width="100" height="100" /></a>
     <h1 class="project-name">OpeningO Co.,Ltd.</h1>
     <h2 class="project-tagline">Opening Technology Observer</h2>
-  </section>
-
-  <section class="main-content">
   <div>
-  <h1><b>We pay attention and research on computer open source technology, and aim to use open source to give back to open source.</b></h1>
+  <h2><b>We pay attention and research on computer open source technology, and aim to use open source to give back to open source.</b></h2>
     </div>
-    <b>Teams</b>
-    <ul>
-    <!-- Jobsz -->
-    <li>
-    <h3>
-      Jobsz
-      <a id="Jobsz" class="anchor"
-        href="https://izcqi.com"
-        aria-hidden="true"><span class="octicon octicon-link"><i>(https://izcqi.com)</i></span></a>
-    </h3>
-    </li>
-      <!-- lucher -->
-    <li>
-    <h3>
-      lucher
-      <a id="lucher" class="anchor"
-        href="#"
-        aria-hidden="true"><span class="octicon octicon-link"></span></a>
-    </h3>
-    </li>
-  </ul>
-    <h5>期待你的加入...</h5>
-    <b>Contact:</b>
-    <ul>
-    <li><h5>openingo.inc#gmail.com</h5></li>
-    <li><h5>zcq#zhucongqi.cn</h5></li>
-    </ul>
+
     <footer class="site-footer">
       <span class="site-footer-owner">&copy; 2013-2020 OpeningO Co.,Ltd.</span>
     </footer>
