--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
 
     <footer class="site-footer">
+      contactus@openingo.org
       <span class="site-footer-owner">&copy; 2013-2020 OpeningO Co.,Ltd.</span>
     </footer>
   </section>
